# saas-template

./: .dockerignore  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  ENVIRONMENT.md  README.md  compose.yaml  eslint.config.mjs  nero.config.ts  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  docker.yml  flutter.yml  mobile.yml
apps/admin/: Dockerfile  README.md  next.config.js  package.json  tsconfig.json
apps/api/: .dockerignore  .env.example  Dockerfile  jest.config.cts  package.json  tsconfig.app.json  webpack.config.js
apps/api-e2e/: jest.config.cts  package.json  tsconfig.json
apps/api/src/: main.ts
apps/compute/: .dockerignore  .env.example  Dockerfile  README.md  project.json  pyproject.toml
apps/compute/src/saas_compute/: __init__.py  main.py
apps/compute/src/saas_compute/api/: health.py
apps/compute/src/saas_compute/core/: __init__.py  config.py
apps/compute/tests/: test_config.py  test_health.py
apps/flutter/: README.md  project.json  pubspec.yaml
apps/flutter/lib/: main.dart
apps/flutter/test/: widget_test.dart
apps/marketing/: Dockerfile  next.config.js  package.json  tsconfig.json
apps/rn/: .babelrc.js  README.md  app.json  eslint.config.mjs  jest.config.cts  metro.config.js  package.json  tsconfig.app.json  tsconfig.spec.json
apps/rn/ios/: Podfile
apps/web/: Dockerfile  README.md  package.json  tsconfig.json
apps/worker/: .env.example  Dockerfile  jest.config.cts  package.json  tsconfig.app.json  tsconfig.spec.json
(+105 files in other folders)
