[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "saas-compute"
version = "0.1.0"
description = "Python-specialised processing service for the SaaS template."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.10,<3",
  "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2.7,<3",
  "pyright>=1.1.400,<2",
  "pytest>=9,<10",
  "ruff>=0.14,<1",
]

[tool.uv]
required-version = "==0.11.21"

[tool.hatch.build.targets.wheel]
packages = ["src/saas_compute"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
